[tool.poetry]
name = "JustDarker_brain_games"
version = "0.7.2"
description = "5 console mini-games for the brain"
authors = ["Darker"]
packages = [
	{ include = "brain_games"},
]
classifiers = [
    "Environment :: Console",
	"Natural Language :: English",
	"Programming Language :: Python"
]
repository = "https://github.com/JustDarker/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

